translate API working synchronised with frontend

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -14,11 +14,36 @@
 <body>
 
   <div class="main-content">
-      <p>Use this site to get your weather</p>
-      <form>
-          <input placeholder="Location" type="text">
-          <button>Search</button>
-      </form>
+      <h1>Translator App</h1>
+
+    <div class="app-functionality__container">
+        <div class="form-section">
+             <form>
+                <div class="form-group">
+                    <label for="textarea">Text To Translate (in English)</label>
+                    <textarea class="form-control" placeholder="your text." id="textareaInput" rows="3"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="targetLanguage">Your Target Language:</label>
+                    <select class="form-control" id="targetLanguageInput">
+                    <option value="es">Spanish</option>
+                    <option value="fr">French</option>
+                    <option value="de">German</option>
+                    <option value="ru">Russian</option>
+                    <option value="yo">Yoruba</option>
+                    <option value="zh-CN">Chinese</option>
+                    <opttion value="ja">Japanese</opttion>
+                    </select>
+                </div>
+                <button id="btn-submit" type="submit" class="btn btn-primary">Submit</button>
+             </form>
+        </div>
+        <div class="output-section">
+            <p>Translated Text</p>
+            <br />
+            <p class="translated-text"></p>
+        </div>
+    </div>
 
       <p id="message-1"></p>
       <p id="message-2"></p>
