--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,4 @@
 * {
-  font-family: Montserrat;
   box-sizing: border-box;
 }
 
@@ -8,6 +7,27 @@ body {
   padding: 0;
 }
 
-.app-container {
-  margin-top: 8rem !important;
+.main-content {
+  width: 80%;
+  margin-top: 2.5rem !important;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.app-functionality__container {
+  margin-top: 1.4rem;
+  display: flex;
+}
+
+.form-section {
+  width: 50%;
+  height: 100%;
+  margin-right: 1rem;
+}
+
+.output-section {
+  width: 50%;
+  height: 50vh;
+  border: 1px solid #f7f7f9;
+  padding: 2rem 1.5rem;
 }
